add new website from server na

--- a/xem-phim-bo/co-vo-tieu-tien-cua-cong-tu-da-toc/index.html
+++ b/xem-phim-bo/co-vo-tieu-tien-cua-cong-tu-da-toc/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1696,18 +1696,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-cong-tinh" title="Tình Cộng Tình">
+          <a class="list-top-movie-link" href="/phim-moi/anh-hung-phan-hac" title="Anh Hùng Phản Hắc">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-cong-tinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-hung-phan-hac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình Cộng Tình
+             Anh Hùng Phản Hắc
             </span>
             <span class="list-top-movie-item-en">
-             Tình Cộng Tình
+             No Room for Crime
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bad-guys" title="Bad Guys">
+           <span class="status">
+            HD Vietsub + Thuyết minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bad-guys-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bad Guys
+            </span>
+            <span class="list-top-movie-item-en">
+             Bad Guys
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/reggie" title="Reggie">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/reggie-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Reggie
+            </span>
+            <span class="list-top-movie-item-en">
+             Reggie
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
@@ -1718,62 +1762,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/jolt" title="Jolt">
+          <a class="list-top-movie-link" href="/phim-moi/cam-nang-xanh" title="Cẩm Nang Xanh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jolt-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-nang-xanh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Jolt
+             Cẩm Nang Xanh
             </span>
             <span class="list-top-movie-item-en">
-             Jolt
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/iruma-gia-dao-phan-2" title="Iruma giá đáo! Phần 2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/iruma-gia-dao-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Iruma giá đáo! Phần 2
-            </span>
-            <span class="list-top-movie-item-en">
-             Mairimashita! Iruma-kun 2nd Season
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-bong-ro-dac-biet" title="Đội Bóng Rổ Đặc Biệt">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-bong-ro-dac-biet-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đội Bóng Rổ Đặc Biệt
-            </span>
-            <span class="list-top-movie-item-en">
-             Champions
+             Green Book
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1784,21 +1784,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/theo-duoi-uoc-mo" title="Theo Đuổi Ước Mơ">
+          <a class="list-top-movie-link" href="/phim-moi/scooby-doo-and-scrappy-doo-phan-5" title="Scooby-Doo and Scrappy-Doo (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/theo-duoi-uoc-mo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/scooby-doo-and-scrappy-doo-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Theo Đuổi Ước Mơ
+             Scooby-Doo and Scrappy-Doo (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Myth Kill Joke
+             Scooby-Doo and Scrappy-Doo (Season 5)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
