add new website from server na

--- a/xem-phim-bo/xin-hay-yeu-duong-voi-ke-hai-huoc-nhu-toi/index.html
+++ b/xem-phim-bo/xin-hay-yeu-duong-voi-ke-hai-huoc-nhu-toi/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1634,7 +1634,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1655,18 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hay-nham-mat-khi-anh-den" title="Hãy Nhắm Mắt Khi Anh Đến">
+          <a class="list-top-movie-link" href="/phim-moi/khi-ve-sau-khoc" title="Khi ve sầu khóc">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hay-nham-mat-khi-anh-den-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-ve-sau-khoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hãy Nhắm Mắt Khi Anh Đến
+             Khi ve sầu khóc
             </span>
             <span class="list-top-movie-item-en">
-             Love Me If You Dare
+             When They Cry
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1677,18 +1677,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/little-baby-bum-music-time" title="Little Baby Bum: Music Time">
+          <a class="list-top-movie-link" href="/phim-moi/truyen-thuyet-vua-su-tu-2-noi-day" title="Truyền Thuyết Vua Sư Tử 2: Nổi Dậy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/little-baby-bum-music-time-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-thuyet-vua-su-tu-2-noi-day-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Little Baby Bum: Music Time
+             Truyền Thuyết Vua Sư Tử 2: Nổi Dậy
             </span>
             <span class="list-top-movie-item-en">
-             Little Baby Bum: Music Time
+             Richard The Lionheart Rebellion
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1699,18 +1699,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-vien-ki-jura" title="Công Viên Kỉ Jura">
+          <a class="list-top-movie-link" href="/phim-moi/mot-minh-chong-mafia-nhat" title="Một Mình Chống Mafia Nhật">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-vien-ki-jura-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-minh-chong-mafia-nhat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Công Viên Kỉ Jura
+             Một Mình Chống Mafia Nhật
             </span>
             <span class="list-top-movie-item-en">
-             Jurassic Park
+             Wasabi
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1721,21 +1721,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/duong-mon" title="Đường Mòn">
+          <a class="list-top-movie-link" href="/phim-moi/shikabane-hime-kuro" title="Shikabane Hime: Kuro">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-mon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shikabane-hime-kuro-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đường Mòn
+             Shikabane Hime: Kuro
             </span>
             <span class="list-top-movie-item-en">
-             Takas
+             Corpse Princess 2
             </span>
             <span class="list-top-movie-item-view">
-             33 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1743,18 +1743,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/di-nhan-bong-toi" title="Dị Nhân Bóng Tối">
+          <a class="list-top-movie-link" href="/phim-moi/phi-vu-trieu-do-mot-hien-tuong" title="Phi vụ triệu đô: Một hiện tượng">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/di-nhan-bong-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-trieu-do-mot-hien-tuong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dị Nhân Bóng Tối
+             Phi vụ triệu đô: Một hiện tượng
             </span>
             <span class="list-top-movie-item-en">
-             Transference
+             Money Heist: The Phenomenon
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
