add new website from server na

--- a/xem-phim-moi/tu-xuan-dao-3-vo-gian-luyen-nguc/index.html
+++ b/xem-phim-moi/tu-xuan-dao-3-vo-gian-luyen-nguc/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1654,6 +1654,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1675,28 +1697,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
            </div>
           </a>
          </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             49 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
         </ul>
        </div>
       </div>
@@ -1711,18 +1711,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-deo-bam-phan-3" title="Kẻ đeo bám (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-guom-diet-quy-chuyen-di-cua-anh-em" title="Thanh Gươm Diệt Quỷ: Chuyến đi của anh em">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-deo-bam-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-guom-diet-quy-chuyen-di-cua-anh-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kẻ đeo bám (Phần 3)
+             Thanh Gươm Diệt Quỷ: Chuyến đi của anh em
             </span>
             <span class="list-top-movie-item-en">
-             You (Season 3)
+             Demon Slayer: Brother and Sister Bond
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1733,18 +1733,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-vong-the-gioi-ngam" title="Tham vọng thế giới ngầm">
+          <a class="list-top-movie-link" href="/phim-moi/mat-thay-tai-nghe" title="Mắt thấy, tai nghe">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-vong-the-gioi-ngam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-thay,-tai-nghe-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tham vọng thế giới ngầm
+             Mắt thấy, tai nghe
             </span>
             <span class="list-top-movie-item-en">
-             Sky High
+             Things Heard &amp; Seen
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1755,18 +1755,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doraemon-nobita-va-binh-doan-nguoi-sat" title="Doraemon: Nobita và Binh Đoàn Người Sắt">
+          <a class="list-top-movie-link" href="/phim-moi/linh-vuc-1" title="Linh Vực 1">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doraemon-nobita-va-binh-doan-nguoi-sat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-vuc-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Doraemon: Nobita và Binh Đoàn Người Sắt
+             Linh Vực 1
             </span>
             <span class="list-top-movie-item-en">
-             Doraemon: Nobita and the New Steel Troops: Angel Wings
+             The World of Fantasy 1
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/rolling-thunder-revue-cau-chuyen-cua-bob-dylan-ke-boi-martin-scorsese" title="Rolling Thunder Revue: Câu chuyện của Bob Dylan kể bởi Martin Scorsese">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rolling-thunder-revue-cau-chuyen-cua-bob-dylan-ke-boi-martin-scorsese-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Rolling Thunder Revue: Câu chuyện của Bob Dylan kể bởi Martin Scorsese
+            </span>
+            <span class="list-top-movie-item-en">
+             Rolling Thunder Revue: A Bob Dylan Story by Martin Scorsese
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1777,43 +1799,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-cua-amy-winehouse" title="Hành Trình Của Amy Winehouse">
+          <a class="list-top-movie-link" href="/phim-moi/thoi-dai-tu-do-cua-toi" title="Thời Đại Tự Do Của Tôi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-cua-amy-winehouse-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thoi-dai-tu-do-cua-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hành Trình Của Amy Winehouse
+             Thời Đại Tự Do Của Tôi
             </span>
             <span class="list-top-movie-item-en">
-             Amy
+             In a Good Way
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/an-tu-tren-xe" title="Án Tử Trên Xe">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/an-tu-tren-xe-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Án Tử Trên Xe
-            </span>
-            <span class="list-top-movie-item-en">
-             Hard Hit
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
