--- a/xem-phim-moi/tu-xuan-dao-3-vo-gian-luyen-nguc/index.html
+++ b/xem-phim-moi/tu-xuan-dao-3-vo-gian-luyen-nguc/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1654,28 +1654,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1688,6 +1666,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1711,18 +1711,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thanh-guom-diet-quy-chuyen-di-cua-anh-em" title="Thanh Gươm Diệt Quỷ: Chuyến đi của anh em">
+          <a class="list-top-movie-link" href="/phim-moi/chien-tranh-giua-cac-vi-sao-cuoc-chien-vo-tinh-phan-3" title="Chiến Tranh Giữa Các Vì Sao: Cuộc Chiến Vô Tính (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-guom-diet-quy-chuyen-di-cua-anh-em-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-tranh-giua-cac-vi-sao-cuoc-chien-vo-tinh-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thanh Gươm Diệt Quỷ: Chuyến đi của anh em
+             Chiến Tranh Giữa Các Vì Sao: Cuộc Chiến Vô Tính (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Demon Slayer: Brother and Sister Bond
+             Star Wars: The Clone Wars (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1733,18 +1733,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-thay-tai-nghe" title="Mắt thấy, tai nghe">
+          <a class="list-top-movie-link" href="/phim-moi/trung-doan-cuop-2-ke-trom-mat-ngan" title="Trung đoàn cướp 2: Kẻ trộm mặt ngàn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-thay,-tai-nghe-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trung-doan-cuop-2-ke-trom-mat-ngan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mắt thấy, tai nghe
+             Trung đoàn cướp 2: Kẻ trộm mặt ngàn
             </span>
             <span class="list-top-movie-item-en">
-             Things Heard &amp; Seen
+             Bandit Regiment 2: Thousand Face Thief
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1755,18 +1755,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/linh-vuc-1" title="Linh Vực 1">
+          <a class="list-top-movie-link" href="/phim-moi/hang-xom-cua-toi-la-totoro" title="Hàng xóm của tôi là Totoro">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-vuc-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hang-xom-cua-toi-la-totoro-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Linh Vực 1
+             Hàng xóm của tôi là Totoro
             </span>
             <span class="list-top-movie-item-en">
-             The World of Fantasy 1
+             My Neighbor Totoro
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1777,18 +1777,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/rolling-thunder-revue-cau-chuyen-cua-bob-dylan-ke-boi-martin-scorsese" title="Rolling Thunder Revue: Câu chuyện của Bob Dylan kể bởi Martin Scorsese">
+          <a class="list-top-movie-link" href="/phim-moi/khi-harry-gap-sally" title="Khi Harry Gặp Sally">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rolling-thunder-revue-cau-chuyen-cua-bob-dylan-ke-boi-martin-scorsese-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-harry-gap-sally-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Rolling Thunder Revue: Câu chuyện của Bob Dylan kể bởi Martin Scorsese
+             Khi Harry Gặp Sally
             </span>
             <span class="list-top-movie-item-en">
-             Rolling Thunder Revue: A Bob Dylan Story by Martin Scorsese
+             When Harry Met Sally...
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1799,21 +1799,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thoi-dai-tu-do-cua-toi" title="Thời Đại Tự Do Của Tôi">
+          <a class="list-top-movie-link" href="/phim-moi/mai-am-cua-meo-chi" title="Mái Ấm Của Mèo Chi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thoi-dai-tu-do-cua-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mai-am-cua-meo-chi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thời Đại Tự Do Của Tôi
+             Mái Ấm Của Mèo Chi
             </span>
             <span class="list-top-movie-item-en">
-             In a Good Way
+             Chi's Sweet Home
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
