add new website from server na

--- a/xem-phim-moi/tu-xuan-dao-3-vo-gian-luyen-nguc/index.html
+++ b/xem-phim-moi/tu-xuan-dao-3-vo-gian-luyen-nguc/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1711,84 +1711,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chien-tranh-giua-cac-vi-sao-cuoc-chien-vo-tinh-phan-3" title="Chiến Tranh Giữa Các Vì Sao: Cuộc Chiến Vô Tính (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/thang-chin-lai-ve" title="Tháng Chín Lại Về">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-tranh-giua-cac-vi-sao-cuoc-chien-vo-tinh-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thang-chin-lai-ve-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chiến Tranh Giữa Các Vì Sao: Cuộc Chiến Vô Tính (Phần 3)
+             Tháng Chín Lại Về
             </span>
             <span class="list-top-movie-item-en">
-             Star Wars: The Clone Wars (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trung-doan-cuop-2-ke-trom-mat-ngan" title="Trung đoàn cướp 2: Kẻ trộm mặt ngàn">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trung-doan-cuop-2-ke-trom-mat-ngan-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trung đoàn cướp 2: Kẻ trộm mặt ngàn
-            </span>
-            <span class="list-top-movie-item-en">
-             Bandit Regiment 2: Thousand Face Thief
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hang-xom-cua-toi-la-totoro" title="Hàng xóm của tôi là Totoro">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hang-xom-cua-toi-la-totoro-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hàng xóm của tôi là Totoro
-            </span>
-            <span class="list-top-movie-item-en">
-             My Neighbor Totoro
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khi-harry-gap-sally" title="Khi Harry Gặp Sally">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-harry-gap-sally-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Khi Harry Gặp Sally
-            </span>
-            <span class="list-top-movie-item-en">
-             When Harry Met Sally...
+             Come September
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1799,21 +1733,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mai-am-cua-meo-chi" title="Mái Ấm Của Mèo Chi">
+          <a class="list-top-movie-link" href="/phim-moi/bao-thai-quy" title="Bào Thai Quỷ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mai-am-cua-meo-chi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-thai-quy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mái Ấm Của Mèo Chi
+             Bào Thai Quỷ
             </span>
             <span class="list-top-movie-item-en">
-             Chi's Sweet Home
+             Malicious
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vuot-qua-ca-vu-tru" title="Vượt qua cả vũ trụ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuot-qua-ca-vu-tru-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vượt qua cả vũ trụ
+            </span>
+            <span class="list-top-movie-item-en">
+             Beyond the Universe
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/xac-chet-bi-an-tren-cau-phan-3" title="Xác Chết Bí Ẩn Trên Cầu (Phần 3)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-chet-bi-an-tren-cau-phan-3-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Xác Chết Bí Ẩn Trên Cầu (Phần 3)
+            </span>
+            <span class="list-top-movie-item-en">
+             The Bridge - Bron/Broen (Season 3)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-xam-luoc-cua-nguoi-ngoai-hanh-tinh" title="Cuộc xâm lược của người ngoài hành tinh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-xam-luoc-cua-nguoi-ngoai-hanh-tinh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cuộc xâm lược của người ngoài hành tinh
+            </span>
+            <span class="list-top-movie-item-en">
+             Invasion of the Alien
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
